Alignment issues

--- a/src/index.css
+++ b/src/index.css
@@ -76,3 +76,16 @@ body{
   /* padding: 0 0.5rem; */
   display: none !important
 }
+/* Hide scrollbar for Chrome, Safari and Opera */
+.slider {
+  overflow-x: auto;
+  scrollbar-width: none;
+  /* Firefox */
+  -ms-overflow-style: none;
+  /* IE and Edge */
+}
+
+.slider::-webkit-scrollbar {
+  display: none;
+  /* Chrome, Safari, Opera */
+}
